--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     text-align: center;
+    background-color: rgb(253, 189, 41);
 }
 h1{
     text-align: center;
